--- a/index.html
+++ b/index.html
@@ -7,61 +7,57 @@
     <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
     <link rel="stylesheet" href="styles.css">
 
-    <title>Frontend Mentor | Social proof section</title>
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
+    <title>Social proof section</title>
+    
   </head>
-  <body>
-    <div class="container">
-      <header class="header">
-        <h1 class="title">10,000+ of our users love our products.</h1>
-        <p>We only provide great products combined with excellent customer service.
-        See what our satisfied customers are saying about our services.</p>
-      </header>
 
-      <section class="reviews">
-        <div class="review review_1">
-          <div>
-            <img class="review__img" src="images\icon-star.svg" alt="star">
-            <img class="review__img" src="images\icon-star.svg" alt="star">
-            <img class="review__img" src="images\icon-star.svg" alt="star">
-            <img class="review__img" src="images\icon-star.svg" alt="star">
-            <img class="review__img" src="images\icon-star.svg" alt="star">
-          </div>
-          <p class="review__p">Rated 5 Stars in Reviews</p>
-        </div>
-        <div class="review review_2">
-          <div>
-            <img class="review__img" src="images\icon-star.svg" alt="star">
-            <img class="review__img" src="images\icon-star.svg" alt="star">
-            <img class="review__img" src="images\icon-star.svg" alt="star">
-            <img class="review__img" src="images\icon-star.svg" alt="star">
-            <img class="review__img" src="images\icon-star.svg" alt="star">
-          </div>
-          <p class="review__p">Rated 5 Stars in Report Guru</p>
-        </div>
-        <div class="review review_3">
-          <div>
-            <img class="review__img" src="images\icon-star.svg" alt="star">
-            <img class="review__img" src="images\icon-star.svg" alt="star">
-            <img class="review__img" src="images\icon-star.svg" alt="star">
-            <img class="review__img" src="images\icon-star.svg" alt="star">
-            <img class="review__img" src="images\icon-star.svg" alt="star">
-          </div>
-          <p class="review__p">Rated 5 Stars in BestTech</p>
-        </div>
-      </section>
+  <body>
+    <main class="container">
+
+        <header class="header">
+          <h1 class="title">10,000+ of our users love our products.</h1>
+          <p>We only provide great products combined with excellent customer service.
+          See what our satisfied customers are saying about our services.</p>
+        </header>
+  
+        <section class="reviews">
+          <article class="review review_1">
+            <div>
+              <img class="review__img" src="images\icon-star.svg" alt="star">
+              <img class="review__img" src="images\icon-star.svg" alt="star">
+              <img class="review__img" src="images\icon-star.svg" alt="star">
+              <img class="review__img" src="images\icon-star.svg" alt="star">
+              <img class="review__img" src="images\icon-star.svg" alt="star">
+            </div>
+            <p class="review__p">Rated 5 Stars in Reviews</p>
+          </article>
+
+          <article class="review review_2">
+            <div>
+              <img class="review__img" src="images\icon-star.svg" alt="star">
+              <img class="review__img" src="images\icon-star.svg" alt="star">
+              <img class="review__img" src="images\icon-star.svg" alt="star">
+              <img class="review__img" src="images\icon-star.svg" alt="star">
+              <img class="review__img" src="images\icon-star.svg" alt="star">
+            </div>
+            <p class="review__p">Rated 5 Stars in Report Guru</p>
+          </article>
+
+          <article class="review review_3">
+            <div>
+              <img class="review__img" src="images\icon-star.svg" alt="star">
+              <img class="review__img" src="images\icon-star.svg" alt="star">
+              <img class="review__img" src="images\icon-star.svg" alt="star">
+              <img class="review__img" src="images\icon-star.svg" alt="star">
+              <img class="review__img" src="images\icon-star.svg" alt="star">
+            </div>
+            <p class="review__p">Rated 5 Stars in BestTech</p>
+          </article>
+        </section>
 
       <section class="cards">
 
-        <div class="card card_1">
+        <article class="card card_1">
           <div class="card__user">
             <img class="user__img" src="images\image-colton.jpg" alt="Image-Colton">
             <p class="user__data">Colton Smith <br> <span>Verified Buyer</span></p>
@@ -69,33 +65,34 @@
           <p class="card__p">"We needed the same printed design as the one we had ordered a week prior.
             Not only did they find the original order, but we also received it in time.
             Excellent!"</p>
-        </div>
+        </article>
 
-        <div class="card card_2">
+        <article class="card card_2">
           <div class="card__user">
             <img class="user__img" src="images\image-irene.jpg" alt="Image-Irene">
             <p class="user__data">Irene Roberts <br> <span>Verified Buyer</span></p>
           </div>
           <p class="card__p">"Customer service is always excellent and very quick turn around. Completely
             delighted with the simplicity of the purchase and the speed of delivery."</p>
-        </div>
+        </article>
 
-        <div class="card card_3">
+        <article class="card card_3">
           <div class="card__user">
             <img class="user__img" src="images\image-anne.jpg" alt="Image-Anne">
             <p class="user__data">Anne Wallace  <br> <span>Verified Buyer</span></p>
           </div>
           <p class="card__p">"Put an order with this company and can only praise them for the very high
             standard. Will definitely use them again and recommend them to everyone!"</p>
-        </div>
+        </article>
       </section>
-    </div>
+    </main>
 
     <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
-      >. Coded by <a href="#">Gastón Recalde</a>.
+      >. Coded by <a href="https://gaston-recalde-portafolio.netlify.app" target="_blank">Gastón Recalde</a>.
     </div>
   </body>
+  
 </html>
