--- a/index.html
+++ b/index.html
@@ -15,41 +15,42 @@
     <main class="container">
 
         <header class="header">
-          <h1 class="title">10,000+ of our users love our products.</h1>
+          <h1 class="header__title">10,000+ of our users love our products.</h1>
           <p>We only provide great products combined with excellent customer service.
-          See what our satisfied customers are saying about our services.</p>
+          See what our satisfied customers are saying about our services.
+          </p>
         </header>
   
         <section class="reviews">
-          <article class="review review_1">
+          <article class="review review-1">
             <div>
-              <img class="review__img" src="images\icon-star.svg" alt="star">
-              <img class="review__img" src="images\icon-star.svg" alt="star">
-              <img class="review__img" src="images\icon-star.svg" alt="star">
-              <img class="review__img" src="images\icon-star.svg" alt="star">
-              <img class="review__img" src="images\icon-star.svg" alt="star">
+              <img class="review__img" src="images/icon-star.svg" alt="star">
+              <img class="review__img" src="images/icon-star.svg" alt="star">
+              <img class="review__img" src="images/icon-star.svg" alt="star">
+              <img class="review__img" src="images/icon-star.svg" alt="star">
+              <img class="review__img" src="images/icon-star.svg" alt="star">
             </div>
             <p class="review__p">Rated 5 Stars in Reviews</p>
           </article>
 
-          <article class="review review_2">
+          <article class="review review-2">
             <div>
-              <img class="review__img" src="images\icon-star.svg" alt="star">
-              <img class="review__img" src="images\icon-star.svg" alt="star">
-              <img class="review__img" src="images\icon-star.svg" alt="star">
-              <img class="review__img" src="images\icon-star.svg" alt="star">
-              <img class="review__img" src="images\icon-star.svg" alt="star">
+              <img class="review__img" src="images/icon-star.svg" alt="star">
+              <img class="review__img" src="images/icon-star.svg" alt="star">
+              <img class="review__img" src="images/icon-star.svg" alt="star">
+              <img class="review__img" src="images/icon-star.svg" alt="star">
+              <img class="review__img" src="images/icon-star.svg" alt="star">
             </div>
             <p class="review__p">Rated 5 Stars in Report Guru</p>
           </article>
 
-          <article class="review review_3">
+          <article class="review review-3">
             <div>
-              <img class="review__img" src="images\icon-star.svg" alt="star">
-              <img class="review__img" src="images\icon-star.svg" alt="star">
-              <img class="review__img" src="images\icon-star.svg" alt="star">
-              <img class="review__img" src="images\icon-star.svg" alt="star">
-              <img class="review__img" src="images\icon-star.svg" alt="star">
+              <img class="review__img" src="images/icon-star.svg" alt="star">
+              <img class="review__img" src="images/icon-star.svg" alt="star">
+              <img class="review__img" src="images/icon-star.svg" alt="star">
+              <img class="review__img" src="images/icon-star.svg" alt="star">
+              <img class="review__img" src="images/icon-star.svg" alt="star">
             </div>
             <p class="review__p">Rated 5 Stars in BestTech</p>
           </article>
@@ -57,42 +58,44 @@
 
       <section class="cards">
 
-        <article class="card card_1">
+        <article class="card card-1">
           <div class="card__user">
-            <img class="user__img" src="images\image-colton.jpg" alt="Image-Colton">
+            <img class="user__img" src="images/image-colton.jpg" alt="Image-Colton">
             <p class="user__data">Colton Smith <br> <span>Verified Buyer</span></p>
           </div>
           <p class="card__p">"We needed the same printed design as the one we had ordered a week prior.
             Not only did they find the original order, but we also received it in time.
-            Excellent!"</p>
+            Excellent!"
+          </p>
         </article>
 
-        <article class="card card_2">
+        <article class="card card-2">
           <div class="card__user">
-            <img class="user__img" src="images\image-irene.jpg" alt="Image-Irene">
+            <img class="user__img" src="images/image-irene.jpg" alt="Image-Irene">
             <p class="user__data">Irene Roberts <br> <span>Verified Buyer</span></p>
           </div>
           <p class="card__p">"Customer service is always excellent and very quick turn around. Completely
-            delighted with the simplicity of the purchase and the speed of delivery."</p>
+            delighted with the simplicity of the purchase and the speed of delivery."
+          </p>
         </article>
 
-        <article class="card card_3">
+        <article class="card card-3">
           <div class="card__user">
-            <img class="user__img" src="images\image-anne.jpg" alt="Image-Anne">
+            <img class="user__img" src="images/image-anne.jpg" alt="Image-Anne">
             <p class="user__data">Anne Wallace  <br> <span>Verified Buyer</span></p>
           </div>
           <p class="card__p">"Put an order with this company and can only praise them for the very high
-            standard. Will definitely use them again and recommend them to everyone!"</p>
+            standard. Will definitely use them again and recommend them to everyone!
+          </p>
         </article>
       </section>
     </main>
 
     <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="https://gaston-recalde-portafolio.netlify.app" target="_blank">Gastón Recalde</a>.
+      Challenge by<a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="https://gaston-recalde-portafolio.netlify.app" target="_blank">Gastón Recalde</a>.
     </div>
+
   </body>
   
 </html>
